# University-Projects

./: README.md  first.txt
Assembly_and_Verilog/Assembly_projects/: arithmetics.asm  mini_calculator.asm  select_chars_byASCI_code.asm  string_concatenator.asm  switch.asm
Assembly_projects/CacheImplementation/: Documentatie.docx
Assembly_projects/Code/: pow.asm  sum.asm
C#_projects/MetalConstruction/: Construction.cs  MetalConstruction.sln
CS_projects/BankAccounts/: MainClass.cs  bankAccounts.csproj
CS_projects/MetalConstruction/: EntryPoint.cs
C_projects/: ChangeBases.c  backtrackingOfMoney.c  calculateBankInterest_inCredits.c
C_projects/AtomC_Compiler/: Makefile
C_projects/Lists_inC/: main.c  windows-11.res
C_projects/MatrixOperations/: Main.c  Makefile  algorithm.c  library.h
C_projects/Parallel_Matrix_Multiply/: Main.c  Makefile  README.txt  auxiliarFunctions.c  auxiliarLibrary.h  implementation.c  library.h
C_projects/Parallel_Matrix_Multiply-Linux/: Main.c  Makefile  auxiliarFunctions.c  implementation.c  library.h
C_projects/ThreadSynchronization/: Barrier_documentation.docx  MyBarrierImplementation.c  benchmark.c
C_projects/WindowsServices/: CreateMyEventInEventViewer.c  ListRunningProcessesOnLocalMachine.c
C_projects/writeNumbersInLetters/: Main.c  algorithm.c  library.h
Cpp_projects/: CMakeLists.txt  run.sh
Cpp_projects/include/: Student.h  demo.h
Cpp_projects/src/: Student.cpp
DictionaryAPI/: README.md
DictionaryAPI/resources/: DataBase.txt  LanguageCodes.txt
DictionaryAPI/src/: GUI.java  RunApp.java
Java_projects/EventBus-Arhitecture/: Documentation.txt  pom.xml
Java_projects/FileReader/: compile.bat
Java_projects/Inheritance/: .gitignore
Java_projects/JAR handling/: .classpath  .project  manifest.mf
Java_projects/JSON Handling/: BankAccountDB.json  Documentation.txt
LeetCode_Problems/Tema1/: CMakeCache.txt  CMakeLists.txt
LeetCode_Problems/Tema1/src/: demo.cpp
ProiectPAOO/: CMakeLists.txt
ProiectPAOO/include/: elev.hpp  elev_premiant.hpp  school.hpp
ProiectPAOO/src/: demonstrate_broken.cpp  elev.cpp  elev_premiant.cpp  main.cpp  school.cpp  test_items.cpp
(+395 files in other folders)
